--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "valentine-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://<YahiaHatab>.github.io/<Valentines>",
+  "homepage": "http://<YahiaHatab>.github.io/<valentines>",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
